<resources>
    <string name="app_name" translatable="false">TAC Works</string>
    <string name="key" translatable="false">AIzaSyAkGHdQp1L6roLRE5zUUfF1ShBph5wgnM0</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="trucks">Trucks</string>
    <string name="add_work">Add work</string>
    <string name="if_you_have_an_account_please_sign_in">If you have an account, please Sign in</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>

    <string-array name="base_fragments">
        <item>HomeFragment</item>
        <item>BarcodeFragment</item>
        <item>RecognizeTextFragment</item>
        <item>SettingsFragment</item>
    </string-array>

    <string name="name_surname">Name Surname</string>
    <string name="about_us">About Us</string>
    <string name="language">Language</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="_2021_all_rights_reserved">© 2022 All rights reserved</string>
    <string name="new_user">New user?</string>
    <string name="register_now"><u>Register now</u></string>
    <string name="use_other_methods">Use other methods</string>
    <string name="client">Client</string>
    <string name="driver">Driver</string>
    <string name="please_select_registration_type">Please select registration type</string>
    <string name="surname">Surname</string>
    <string name="terms_amp_conditions">"<u>Terms &amp; Conditions</u>"</string>
    <string name="registration">Registration</string>
    <string name="i_agree_to_tac_works">I agree to TAC Works</string>
    <string name="phone_number">Phone number</string>
    <string name="please_enter_your_personal_details">Please enter your personal details</string>
    <string name="next">Next</string>
    <string name="please_enter_your_username_and_password">Please enter your username and password</string>
    <string name="login">Login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="a_code_has_been_sent_to_your_phone_number_please_enter_it">A code has been sent to your phone number, please enter it please</string>
    <string name="enter_code">Enter code</string>
    <string name="title_forgot_password">Forgot\nPassword?</string>
    <string name="description_forgot_password">Don`t worry! it happens.Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="would_you_like_to_use_your_pin_or_fingerprint_to_sign_in">Would you like to use your PIN or fingerprint to sign in?</string>
    <string name="pin_code">Pin Code</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="create_a_pin_code_to_enter">Create a Pin code to enter</string>
    <string name="don_t_create_a_pin">Don\'t create a Pin</string>
    <string name="don_t_create_a_fingerprint">Don\'t create a Fingerprint</string>
    <string name="create_a_fingerprint">Create a Fingerprint</string>
    <string name="skip">Skip</string>
    <string name="use_fingerprint_to_enter">Use fingerprint to enter?</string>
    <string name="a_valid_fingerprint_will_be_enough_to_enter_the_application">A valid fingerprint will be enough\n to enter the application</string>
    <string name="fingerprint_not_detected">"Fingerprint not detected"</string>
    <string name="city">City</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_settings">User settings</string>
    <string name="system_settings">System settings</string>
    <string name="select_language">Select language</string>
    <string name="armenian">Armenian</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="empty_view_no_data">No data</string>
    <string name="empty_view_loading">Loading</string>
    <string name="change_password">Change password</string>
    <string name="log_in_with_fingerprint">Log in with Fingerprint</string>
    <string name="help">Help</string>
    <string name="do_you_want_to_log_out_of_your_account">Do you want to log out of your account?</string>
    <string name="yes">Yes</string>
    <string name="error_login">An error occurred, please try again</string>
    <string name="title_text_enter_otp">Enter the verification code we just sent you on your email address.</string>
    <string name="description_verification_otp">Dont receive the OTP?</string>
    <string name="btn_resend_otp">Resend OTP</string>
    <string name="text_btn_verify">Verify</string>
    <string name="title_text_reset_password">Reset\nPassword</string>
    <string name="hint_text_new_password">New password</string>
    <string name="text_btn_reset_password">Reset Password</string>
    <string name="data_birth">Дата рождения</string>

    <string-array name="city">
        <item>Yerevan</item>
        <item>Gyumri</item>
        <item>Vanadzor</item>
        <item>Vagharshapat</item>
        <item>Hrazdan</item>
        <item>Abovyan</item>
        <item>Kapan</item>
        <item>Ararat</item>
        <item>Armavir</item>
        <item>Stepanavan</item>
        <item>Gavar</item>
        <item>Artashat</item>
        <item>Goris</item>
        <item>Masis</item>
        <item>Ashtarak</item>
        <item>Sevan</item>
        <item>Spitak</item>
        <item>Ijevan</item>
        <item>Dilijan</item>
        <item>Alaverdi</item>
        <item>Vedi</item>
        <item>Vardenis</item>
        <item>Martuni</item>
        <item>Yeghvard</item>
        <item>Metsamor</item>
        <item>Berd</item>
        <item>Yeghegnadzor</item>
        <item>Vardenik</item>
        <item>Akhuryan</item>
        <item>Tashir</item>
        <item>Nerkin Getashen</item>
        <item>Byureghavan</item>
        <item>Garrni</item>
        <item>Chambarak</item>
        <item>Aparan</item>
        <item>Vayk</item>
        <item>Sardarapat</item>
        <item>Noyemberyan</item>
        <item>Talin</item>
        <item>Nor Geghi</item>
        <item>Oshakan</item>
        <item>Agarak</item>
        <item>Jermuk</item>
        <item>Meghri</item>
        <item>Odzun</item>
        <item>Zovuni</item>
        <item>Azatan</item>
        <item>Prroshyan</item>
        <item>Kasakh</item>
        <item>Yeranos</item>
        <item>Avshar</item>
        <item>Lchashen</item>
        <item>Malishka</item>
        <item>Verin Getashen</item>
        <item>Lichk</item>
        <item>Vosketap</item>
        <item>Tsaghkadzor</item>

    </string-array>

    <string name="job_offers">Job Offers</string>
    <string name="add_special_offer">If you have a job offer, you can register it here and you will definitely receive an answer equivalent to that offer</string>
    <string name="add_offer">Add offer</string>
    <string name="please_enter_your_requirements">Please enter your requirements</string>
    <string name="type_special_equipment">Type special equipment</string>
    <string name="start_address">Address</string>
    <string name="end_address">End address</string>
    <string name="proposed_price_of_the_work">Proposed price of the work</string>
    <string name="brief_job_description">Brief job description</string>
    <string name="add_job_offer">Add job offer</string>

    <string-array name="special_equipment">
        <item>Truck</item>
        <item>Dump truck</item>
        <item>Truck crane</item>
        <item>Manipulator</item>
        <item>Crawler excavator</item>
        <item>Wheeled excavator</item>
        <item>Excavator loader</item>
        <item>Concrete mixer</item>
        <item>Concrete pump</item>
        <item>Tow truck</item>
        <item>Loader</item>
        <item>Road roller</item>

    </string-array>

    <string name="order_now">Order now</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="request_post">We will review your request and if it meets the program criteria, your request will be posted in the announcements section.</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="please_try_again">Please try again</string>
    <string name="remember_login_and_password">Login was successful.\nRemember login and password ?</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="not_now">Not now</string>
    <string name="my_profile">My profile</string>
    <string name="my_statements">My statements</string>
    <string name="preferred_announcements">Preferred announcements</string>
    <string name="contacts">Contacts</string>
    <string name="wallet">Wallet</string>
    <string name="search">Search</string>
    <string name="popular_sections">Popular sections</string>
    <string name="sections">Sections</string>
    <string name="loader">Loader</string>
    <string name="excavator">Excavator</string>
    <string name="dump_truck">Dump Truck</string>
    <string name="truck_cranes">Truck crane</string>
    <string name="manipulators">Manipulator</string>
    <string name="crawler_excavators">Crawler excavator</string>
    <string name="wheeled_excavators">Wheeled excavator</string>
    <string name="excavator_loaders">Excavator loader</string>
    <string name="concrete_mixers">Concrete mixer</string>
    <string name="concrete_pump">Concrete pump</string>
    <string name="tow_trucks">Tow truck</string>
    <string name="confirm">Confirm</string>
    <string name="operation_completed_successfully">Operation completed successfully</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="pleace_sign_in">Please SignIn in your account</string>
    <string name="my_special_equipments">My special equipments</string>
    <string name="add_special_equipment">Add special equipment</string>
    <string name="please_fill_in_the_indicated_fields">Please fill in the indicated fields</string>
    <string name="model">Model</string>
    <string name="weight_special_equipment">Weight special equipment</string>
    <string name="special_equipment_capacity">Load capacity of special equipment</string>
    <string name="length_of_arrow">Length of arrow</string>
    <string name="production_year">Production year</string>
    <string name="see_all_sections">See all sections</string>
    <string name="special_equipments">Special equipment</string>
    <string name="see_more">See more</string>
    <string name="brand">Brand</string>
    <string name="road_roller">Road roller</string>
    <string name="load_capacity">Load capacity</string>
    <string name="weight_car">Weight car</string>
    <string name="close">Close</string>
    <string name="faq_search_no_result">Search for "%s"Nothing found"</string>
    <string name="faq_start_search">Nothing found</string>
    <string name="please_select_your_filters">Please select your filters</string>

</resources>
