<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/main" />

    <item
        android:id="@+id/special_offer_fragment"
        android:icon="@drawable/ic_special_offer_selector"
        android:title="@string/job_offers" />
    <item
        android:id="@+id/trucks_fragment"
        android:icon="@drawable/ic_truck_selector"
        android:title="@string/trucks" />

    <item
        android:id="@+id/construction_works_fragment"
        android:icon="@drawable/ic_construction_work_selector"
        android:title="@string/special_equipment" />

    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/ic_settings_selector"
        android:title="@string/settings" />

</menu>