<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.ml.truckingandconstructionwork.presentation.custom_view.toolbar.ToolbarStandard
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_question"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/size_30"
        android:layout_marginHorizontal="@dimen/size_30"
        android:text="@string/if_you_have_an_account_please_sign_in"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="14dp"
        android:hint="@string/email_address"
        app:hintTextColor="#8998AA"
        app:layout_constraintTop_toBottomOf="@id/title_question">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        app:hintTextColor="#8998AA"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/email_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@drawable/bg_input_edit_text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textFontWeight="300"
        android:textStyle="normal"
        android:textColor="@color/teal_700"
        android:textSize="12sp"
        android:lineHeight="15.06sp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_container"
        tools:targetApi="p" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="33dp"
        android:text="@string/sign_in"
        android:textFontWeight="400"
        android:textStyle="normal"
        android:textSize="18sp"
        android:lineHeight="22.59sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded_button_light_blue"
        app:layout_constraintTop_toBottomOf="@id/label_forgot_password"
        tools:targetApi="p" />
</androidx.constraintlayout.widget.ConstraintLayout>